add: make payment with CODE & VNPay